force-app/main/default/objects/QB_Customer__c/fields/Billing_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_ID__c</fullName>
    <label>Billing Address ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>