force-app/main/default/objects/QB_Customer__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Clients__c</referenceTo>
    <relationshipLabel>QB Customers</relationshipLabel>
    <relationshipName>QB_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>