force-app/main/default/objects/QB_Customer__c/fields/Currency_Reference__c.field-meta.xml
<CustomField>
    <fullName>Currency_Reference__c</fullName>
    <label>Currency Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>