force-app/main/default/objects/QB_Customer__c/fields/IsDeleted_In_QB__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted_In_QB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleted In QB</label>
    <type>Checkbox</type>
</CustomField>