force-app/main/default/objects/QB_Customer__c/fields/LastUpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedTime__c</fullName>
    <label>LastUpdatedTime</label>
    <type>DateTime</type>
</CustomField>