force-app/main/default/objects/QB_Customer__c/fields/Qualified_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Name__c</fullName>
    <label>Qualified Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>