force-app/main/default/objects/QB_Customer__c/fields/Sub_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer__c</fullName>
    <label>Sub Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>