force-app/main/default/objects/QB_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QB_Customer_Id__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Currency_Reference__c</columns>
    <columns>Qualified_Name__c</columns>
    <columns>Sub_Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>